# DeckForge

./: .env.example  .gitignore  .replit  DISCORD_SETUP.md  INVITE_BOT.md  Procfile  README.md  bot.py  pyproject.toml  replit.md
attached_assets/: Pasted-Build-a-Discord-bot-using-discord-py-that-supports-a-collectible-trading-card-system-themed-around-r-1760543798873_1760543798874.txt  Pasted-Build-a-web-based-admin-portal-for-DeckForge-using-FastAPI-or-Flask-and-PostgreSQL-The-portal-all-1760608770882_1760608770882.txt  Pasted-Enhance-the-DeckForge-card-creation-and-merging-system-with-the-following-features-1-Mergeable--1762398925884_1762398925884.txt  Pasted-Enhance-the-DeckForge-card-creation-and-merging-system-with-the-following-features-1-Mergeable--1762399008791_1762399008792.txt  Pasted-Enhance-the-DeckForge-card-creation-and-merging-system-with-the-following-features-1-Mergeable-At-1762398152279_1762398152279.txt  Pasted-Extend-the-existing-Discord-bot-DeckForge-to-support-improved-inventory-management-card-recycling-1760571959023_1760571959024.txt  Pasted-Extend-the-existing-Discord-bot-Phase-1-to-support-a-pack-based-card-drop-system-with-multiple-pac-1760550716425_1760550716425.txt  Pasted-Task-Implement-a-new-Card-Activity-Mission-System-featu_1764811818405.txt
cogs/: cards.py  custom_help.py  future.py  merge.py  missions.py  packs.py  slash_commands.py  trading.py
db/migrations/: 0001_cardbot.sql  0002_drop_rates.sql  0003_pack_system.sql  (+10 more)
utils/: card_helpers.py  drop_helpers.py  merge_helpers.py  pack_logic.py
web/: main.py  object_storage.py
(+13 files in other folders)
